--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,14 +34,22 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 5%;
-    max-width: 100%;
+    width: 100%;
     position: fixed;
     top: 0;
     box-sizing: border-box;
+    background-color: rgba(0, 0, 0, 0.8); /* Background for better readability */
+    z-index: 1000; /* Ensure the header stays on top */
+}
+
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
 nav ul {
-    width: 100%;
     display: flex;
     align-items: center;
     padding: 0;
